--- a/test_switch.yml
+++ b/test_switch.yml
@@ -3,16 +3,7 @@
   gather_facts: no
   tasks:
     - name: Test if the switch is reachable
-      ansible.builtin.ping:
+      ping:
+        dest: 8.8.8.8
       vars:
         ansible_ssh_common_args: '-o KexAlgorithms=+diffie-hellman-group14-sha1 -o Ciphers=+aes128-cbc,aes256-cbc -o HostKeyAlgorithms=+ssh-rsa'
-
-    - name: Run 'show version' command on the switch
-      cisco.ios.ios_command:
-        commands:
-          - show version
-      register: result
-
-    - name: Display the result
-      debug:
-        var: result
