--- a/test_switch.yml
+++ b/test_switch.yml
@@ -6,4 +6,4 @@
       cisco.ios.ios_ping:
         dest: 8.8.8.8
       vars:
-        ansible_ssh_common_args: '-o KexAlgorithms=+diffie-hellman-group14-sha1 -o Ciphers=+aes128-cbc,aes256-cbc,aes256-ctr -o HostKeyAlgorithms=+ssh-rsa'
+        ansible_ssh_common_args: '-o KexAlgorithms=+diffie-hellman-group14-sha1 -o Ciphers=+aes128-cbc,aes256-cbc,aes128-ctr,aes256-ctr -o HostKeyAlgorithms=+ssh-rsa'
