--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,5 @@
 [defaults]
 collections_path = ~/.ansible/collections:/usr/share/ansible/collections
+gathering = explicit
+inventory = /home/sylvester/ansible/hosts
+
