--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,7 @@
 [defaults]
-collections_path = ~/.ansible/collections:/usr/share/ansible/collections
-gathering = explicit
-inventory = /home/sylvester/ansible/hosts
+inventory = ./cisco.yml
+host_key_checking = False
+
+[paramiko_connection]
+look_for_keys = False
 
