--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,6 @@
 [defaults]
-inventory = ./cisco.yml
-host_key_checking = False
-
+#inventory = ./hosts
+#host_key_checking = False
+#retry_files_enabled = False
+#collections_path = ~/.ansible/collections:/usr/share/ansible/collections
+#timeout = 60
