--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-#inventory = ./hosts
+inventory = ./hosts
 #host_key_checking = False
 #retry_files_enabled = False
 #collections_path = ~/.ansible/collections:/usr/share/ansible/collections
