--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = ./hosts
-#host_key_checking = False
+host_key_checking = False
 #retry_files_enabled = False
 #collections_path = ~/.ansible/collections:/usr/share/ansible/collections
 #timeout = 60
