--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 inventory = ./hosts
 host_key_checking = False
+transport = ssh
 #retry_files_enabled = False
 #collections_path = ~/.ansible/collections:/usr/share/ansible/collections
 #timeout = 60
