--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,8 @@
 inventory = ./hosts
 host_key_checking = False
 transport = ssh
+[ssh_connection]
+ssh_args = -o KexAlgorithms=+diffie-hellman-group-exchange-sha1,diffie-hellman-group14-sha1
 #retry_files_enabled = False
 #collections_path = ~/.ansible/collections:/usr/share/ansible/collections
 #timeout = 60
