--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 inventory = ./hosts
 host_key_checking = False
-transport = ssh
+transport = paramiko
 [ssh_connection]
 ssh_args = -o KexAlgorithms=+diffie-hellman-group-exchange-sha1,diffie-hellman-group14-sha1
 #retry_files_enabled = False
